created 2 admin endpoints
